css/custom.css
:root{

	--secondary-color: #3F3E56;
/*	--accent-color: #00AC95; */
	--accent-color: #0f84e7;
	--background-color: #342F44;
	--background-headers: #252332;
	--button-dark: #1A1724;
	--nav-bar-space: calc(72px + calc(calc(.02698550 * 100vw)*2));
}
body{
	background-color: var(--secondary-color);
}
div#main{	
	padding-bottom: calc(72px + calc(calc(.02698550 * 100vw)*2));
	background-color: var(--background-headers); 
}
.empty{
	background-color: var(--secondary-color);
	height: calc((100vh - var(--nav-bar-space)) - var(--nav-bar-space));
}
.btn-rounded{
	border-radius: 50px;
}
.tile{
	width: 45%;
}
.icon {
}

.small-text{
	font-weight: 500;
}
.white-text{
	color: white;
}
.digit{
	font-size: 4rem;
}

.heading-dark{
	background-color: var(--background-color);
	color: white;
	padding-top: 2%;
}
.heading-dark > h4 {font-weight: 500 !important;}

.tile-carousel {
	overflow-x: auto;
	white-space: nowrap;
	align-items: center;
}
.tile-carousel >  .tile.col-6, .tile-carousel > .tile-accent.col-6  {
	display: inline-block;
	float: none;
}
.tile-carousel >  .tile.col-6:nth-child(2n+1), .tile-carousel > .tile.col-6:nth-child(2n+1)> a{
	background-color: var(--secondary-color);
	color: var(--accent-color);
}
.tile-carousel >  .tile.col-6:nth-child(2n+2), .tile-carousel > .tile.col-6:nth-child(2n+2)> a{
        background-color: var(--accent-color);
        color: var(--secondary-color);
}
.row {
	flex-wrap: nowrap;
}
.tile > a > .container > .row, .tile >  .container > .row {
     white-space: normal; 
}

.navbar{
	position: sticky;
	background-color: var(--background-headers);
	padding: 0px;
}
.navbar-brand{
	color: white;
	font-weight: bold;
	margin-left: 1.25rem;
	margin-right: 1.25rem;
}
.navbar-custom{
	padding-top: 11%;
	padding-bottom: 2.7%;
}
.header-wrapper{
	display: block !important;
	justify-content: space-around;
}
.navbar.fixed-bottom{
	padding-top: 2.7%;
	background-color: var(--secondary-color);
	position: fixed !important;
}
.navbar-custom.fixed-top > .header-wrapper > .navbar-wrapper{
    text-align-last: justify;
    padding: 0 5.5% 0 5.5%;
}
.navbar-custom.fixed-bottom > .header-wrapper > .navbar-wrapper{
    text-align-last: justify;
    padding: 0 1.2rem 0 1.2rem;
}
.circle-icon{
	background: var(--background-headers);
	border-radius: 50%;
	padding: 20px;
	text-align: center;
	vertical-align: middle;
}
.fpa{
	min-height: -webkit-fill-available;
}
.fixed-top, .fixed-bottom{
	z-index: 1035;
}
.overlay{
	position: absolute;
	display: none;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.7);
    z-index: 1036;
}
.sidenav {
  height: 100%; /* 100% Full-height */
  width: 0; /* 0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  z-index: 1036; /* Stay on top */
  top: 0; /* Stay at the top */
  left: 0;
  background-color: #111; /* Black*/
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 11%; /* Place content 60px from the top */
  transition: 0.3s; /* 0.5 second transition effect to slide in the sidenav */
  padding-left: 0%;
 /* display: none; */
}
.sidenav a{
  padding: 0% 5.5% 10% 0%;
  text-decoration: none;
  color: #818181;
  display: block;
  transition: 0.3s;
}
.sidenav a.big-text{
	font-size: 25px;
}
.sidenav a.hamburg {
}

.bg{
	height: 100%;
	width: 100%;
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	display: block;
	z-index: 1036;
	background: rgba(0,0,0,100);
	background-image: url('../assets/bg.jpg');
	background-size: cover;
	filter: blur(3px);
	/* transform: scale(1.1); */

}
.login-box{
}
.modal-login{
	width: 75%;
	top: auto !important;
	left: unset !important;
	position: relative;
	
}
.btn-login{
	background-color: var(--accent-color) !important;
}
.order-list{
    display: block;
    padding: 3%;
    padding-left: 10%;
    background-color: var(--background-color);
    color: white;
    border-bottom: 1px solid #000000;
}
.dark{
	background-color: var(--background-color);
	flex-grow: 1;
}
.order-list-item{
    max-width: 100%;
}
.bolder{
    font-weight: 900;
}
.order-list-value{
    font-weight: 400;
    white-space: nowrap;
    text-overflow: ellipsis;
}
.right-arrow > .fa-chevron-right{
    color: darkgrey;
}
.placehold{
    max-height: -webkit-fill-available;
    height: -webkit-fill-available;
    background-color: var(--background-color);
}
.order-details{
    color: white;
}
.detail-header{
    white-space: nowrap;
    font-weight: 900;
}
.detail-value{
    font-weight: 400;
}
td.detail-header, td.detail-value{
    padding-top: 2%;
	padding-bottom: 2%;
	padding-left: 5%;
}
table.order-details{
    padding-top: 5%;
}
.pay-button{
	text-align: center;
}
.search-bar-container{
	display: flex;
	/*max-width:100%;*/
}
.sort-button{
	padding: 0 14%;
	border-radius: 0;
	margin: 0;
	height: 100%;
    width: 100%;
}
.fill-full{
	display: flex;
	flex-flow: column;
	height: 100%;
}
.fill-full-inner{
	flex-grow: 1;
}
.inner-button{
	display:flex;
}
.search-bar-input-container {
	width: 80%;
}
.search-bar-sort-container {
	width: 20%;
}
.search-input{
	border: 0;
	width: 100%;
}
input[type=search]{
	width: 100%;
	padding: 2%;
	padding-left: 5%;
}
a.order-list:hover{
	color: white;
}
.vt-item-grid{
	width: 120%;
}
.item-grid{
	padding-top: 5%;
	padding-left: 5%;
}
.item-grid-container{
	overflow-x: scroll;
	padding: 2% 0%;
}
#main.ng-enter, #main.ng-leave {
	transition: all .66s cubic-bezier(.10, .70, .10, 1);
	-webkit-transition: all .66s cubic-bezier(.10, .70, .10, 1);
	-moz-transition: all .66s cubic-bezier(.10, .70, .10, 1);
}
#main.ng-leave.ng-leave-active.back  {
	transform: translate3d(100%, 0, 0);
	-webkit-transform: translate3d(100%, 0, 0);
}
#main.ng-leave.ng-leave-active {
	transform: translate3d(-100%, 0, 0);
	-webkit-transform: translate3d(-100%, 0, 0);
}
.hover-arrows{
	position: absolute;
	z-index: 10;
	color: white;
	padding: 0% 3%;
}
.arrow-right{
	right: 0;
}
.arrow-left{
	left: 0;
}
@keyframes pulsate {
	from {
		opacity: .3;
	}
	to { 
		opacity: .9;
	}
}
.hover-arrows{
	animation-duration: 0.7s;
	animation-name: pulsate;
	animation-iteration-count: infinite;
	animation-direction: alternate;
}
.vertical-align{
	align-items: center;
}
.center-h{
	text-align: center;
}
.edit-profile-button{
	text-align: center;
	padding-top: 6%;
	padding-bottom: 2%;
}
.profile-detail{
	border-bottom: 2px solid var(--secondary-color);
	padding: 3% 0px;
}
.profile-holder{

}
.row.profile-detail{
	margin-left: 0;
	margin-right: 0;
}
.half-circle{
	height: 7%;
    width: 100%;
    border-bottom-left-radius: 100% 200%;
    border-bottom-right-radius: 100% 200%;
    background: var(--background-headers);
    display: inline-block;
	position: fixed;
	z-index: 1;
	box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
}
.profile-top-secton{
	position: fixed;
	z-index: 2;
	width: 100%;
}
.modal-content{
	background-color: var(--background-color);
	color: white;
}
button.close{
	color: white;
}
.profile-detail-value{
	font-weight: 400;
}
#defaultForm-email, #defaultForm-pass{
	color: white;
}

/* Loading Ring */
.lds-ring {
	display: block;
	/* position: absolute; */
	position: relative;
	top: 35%;
	width: 64px;
	height: 64px;
  }
  .lds-ring div {
	box-sizing: border-box;
	display: block;
	position: absolute;
	width: 51px;
	height: 51px;
	margin: 6px;
	border: 6px solid #fff;
	border-radius: 50%;
	animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
	border-color: #fff transparent transparent transparent;
  }
  .lds-ring div:nth-child(1) {
	animation-delay: -0.45s;
  }
  .lds-ring div:nth-child(2) {
	animation-delay: -0.3s;
  }
  .lds-ring div:nth-child(3) {
	animation-delay: -0.15s;
  }
  @keyframes lds-ring {
	0% {
	  transform: rotate(0deg);
	}
	100% {
	  transform: rotate(360deg);
	}
  }
loading-spinner{
	
	position: fixed; 
	text-align: center;
	z-index: 100;
	width: 100%;
	height: calc((100vh - var(--nav-bar-space)) - var(--nav-bar-space));
	background-color: rgba(51, 51, 51, 0.7);
}
loading-spinner.show{
	display: block;
}
loading-spinner.hide{
	display: none;
}
.bg-main{
	background-color: var(--background-color);
	padding-bottom: 3%;
}
li > h6 {
	font-weight: 900;
}
li > b {
	font-weight: 500;
}
.circle-icon-sm {
    background: var(--background-headers);
    border-radius: 50%;
    padding: 10px;
    text-align: center;
    vertical-align: middle;
}
.circle-icon-sm-extra{
	padding: 10px 12px;
}
notification-button{
    position: fixed;
    z-index: 11;
    bottom: 100px;
    right: 0;
}
.btn-floating{
	box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);
    position: relative;
    z-index: 1;
    vertical-align: middle;
    display: inline-block;
    overflow: hidden;
    transition: all .2s ease-in-out;
    margin: 10px;
    border-radius: 50%;
    padding: 0;
    cursor: pointer;
    width: 47px;
	height: 47px;
}

.notification-list{
    display: block;
    padding: 3%;
    padding-left: 10%;
    background-color: var(--dark);
    color: white;
    border-bottom: 1px solid #000000;
}
.notification-list.read-true{
	background-color: #0e161f;
	color: white;
}
.notification-list.read-false{
	 background-color: #465a92;
	 color: white;
}
.notification-list-item{
    max-width: 100%;
}
@keyframes flashingNotification {
	from {
		background-color: #ffa000; 
		/* opacity: .3; */
	}
	to { 
		 background-color: #ff3547; 
		/* opacity: 1;*/
	}
}
.flashing-notification{
	animation-duration: 0.667s;
	animation-name: flashingNotification;
	animation-iteration-count: infinite;
	animation-direction: alternate;
}

